# mobile-robotics

./: .gitignore  CMakeLists.txt  README.md  theconstructionsim
Extended Kalman Filter/python/: EKF.py
Filtering/: .~lock.SLAM1.pptx#
Filtering/Extended Kalman Filter/: ekf_tutorial.py
Kalman Filter/python/: Kalman.py
Path Planning/: CMakeCache.txt  CMakeLists.txt  Makefile  a_star.cpp  a_star.h  astar.h  bfs.cpp  cmake_install.cmake  dfs.h  dijkstra.cpp  dijkstra.h  main.cpp  map.cpp  map.h  prm  prm.cpp  prm.h
Path Planning/src/graph_search/include/: astar.h  bfs.h  dfs.h  dijkstra.h
Path Planning/src/path_planning/src/: CMakeLists.txt  main.cpp
Path Planning/src/roadmaps/include/: map.h  prm.h  rrt.h
Path Planning/src/roadmaps/src/: CMakeLists.txt  map.cpp  prm.cpp  rrt.cpp
include/: GridMap.h  astar.h  map.h  prm.h  rrt.h
ros/devel/: .catkin  local_setup.sh  setup.sh
ros/devel/share/slam/cmake/: slamConfig.cmake
src/: CMakeLists.txt  GridMap.cpp  astar.cpp  bfs.cpp  dfs.cpp  dijkstra.cpp  main.cpp  map.cpp  rrt.cpp
trash/: README.md
trash/Filtering/: SLAM1.pptx
trash/Path Planning/: README.md
trash/Path Planning/src/: CMakeLists.txt
trash/ros/devel/: .rosinstall
trash/ros/devel/lib/pkgconfig/: slam.pc
trash/ros/devel/lib/slam/: slam_node
trash/ros/src/slam/: CMakeLists.txt
trash/ros/src/slam/src/: drive_controller.cpp
